--- a/css/mystyle1.css
+++ b/css/mystyle1.css
@@ -5,7 +5,7 @@ body {
 
 .wrapper{
     background-position:center;
-    background-image: url('Background2.gif');
+    background-image: url('Background.jpeg');
     background-color: #165fb3; 
     background-repeat:no-repeat; 
     background-size:cover;
