--- a/css/mystyle1.css
+++ b/css/mystyle1.css
@@ -5,7 +5,7 @@ body {
 
 .wrapper{
     background-position:center;
-    background-image: url('Background.jpeg');
+    background-image: url('https://media.tenor.com/1yBgOAZTQBYAAAAC/valorant-arcade.gif');
     background-color: #165fb3; 
     background-repeat:no-repeat; 
     background-size:cover;
